<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrt_exploration</name>
  <version>1.0.0</version>
  <description>A ROS package that implements a multi-robot RRT-based map exploration algorithm. It also has the image-based frontier detection that uses image processing to extract frontier points</description>

  <author>Hassan Umari</author>
  <maintainer email="oh91@windowslive.com">Hassan Umari</maintainer>

  <license>MIT</license>
  <url>http://wiki.ros.org/rrt_exploration</url>

  <!-- For building custom interfaces / msg definitions -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
